k8s/overlays/staging/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: medusajs-staging
  labels:
    app.kubernetes.io/part-of: medusajs
    environment: staging
