k8s/overlays/staging/image-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: medusa-backend
spec:
  template:
    spec:
      containers:
      - name: medusa-backend
        image: turan919/medusajs-backend:latest
