k8s/overlays/staging/storefront-image-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storefront
spec:
  template:
    spec:
      containers:
      - name: storefront
        image: turan919/medusajs-storefront:latest
        imagePullPolicy: Never
